--- a/Flipkart/index.html
+++ b/Flipkart/index.html
@@ -74,7 +74,7 @@
           <!-- Modal -->
           <div class="modal fade" id="exampleModal" tabindex="0" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
-              <div class="modal-content">
+              <div class="modal-body">
 
                 <div class="box">
                   <div class="row">
@@ -87,6 +87,7 @@
                           Recomadations
                         </p>
                       </div>
+                      
                     </div>
                     <div class="col-sm-6 col-xs-1 box2">
                       <div class="user-id user-data">
@@ -165,7 +166,7 @@
 
           <div class="card1" style="border: white;">
 
-            <img src="/images/topoffers.webp" class="card-img-top" alt="...">
+            <img src="images/topoffers.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <span style="font-weight: 500;
                 font-size: 14px;"> Top&nbsp;Offers
@@ -178,7 +179,7 @@
 
           <div class="card1" style="border: white;">
 
-            <img src="/images/grocery01.jpg" class="card-img-top" alt="...">
+            <img src="images/grocery01.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <span style="font-weight: 500;
                 font-size: 14px;"> Groceries
@@ -188,7 +189,7 @@
         </div>
         <div class="col">
           <div class="card1">
-            <img src="/images/electronics01.jpg" class="card-img-top" alt="...">
+            <img src="images/electronics01.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <span style="font-weight: 500;
                font-size: 14px;"> Electronics
